################################################################################
# Tools Scripts
################################################################################
# TODO part in editor/SCsub, part in editor/editor_builders.py
SCRIPT_DOCS = find_program('docs.py')
# In core/SCsub
SCRIPT_ENCRYPTION_KEY = find_program('encryption_key.py')
# TODO use methods.save_active_platforms
SCRIPT_PLATFORM_LOGO = find_program('platform_logo.py')
# In editor/SCsub
SCRIPT_REGISTER_EXPORTERS = find_program('register_exporters.py')
# In platforms/SCsub
SCRIPT_REGISTER_PLATFORM_APIS = find_program('register_platform_apis.py')
# TODO use methods.update_version
SCRIPT_VERSION = find_program('version.py')

SCRIPT_GLSL_BUILDERS = find_program('../glsl_builders.py')
SCRIPT_DEFAULT_THEME_BUILDERS = find_program('../scene/theme/default_theme_builders.py')
SCRIPT_INPUT_BUILDERS = find_program('../core/input/input_builders.py')
SCRIPT_EDITOR_BUILDERS = find_program('../editor/editor_builders.py')
SCRIPT_EDITOR_ICON_BUILDERS = find_program('../editor/icons/editor_icons_builders.py')
SCRIPT_CORE_BUILDERS = find_program('../core/core_builders.py')
SCRIPT_MAIN_BUILDERS = find_program('../main/main_builders.py')
SCRIPT_COMPAT = find_program('scons_compat.py')
