SOURCES += files([
    'audio_server.cpp',
    'camera_server.cpp',
    'display_server.cpp',
    'navigation_server_2d.cpp',
    'navigation_server_3d.cpp',
    'physics_server_2d.cpp',
    'physics_server_3d.cpp',
    'register_server_types.cpp',
    'rendering_server.cpp',
    'text_server.cpp',
    'xr_server.cpp',
])

subdir('audio')
subdir('camera')
subdir('physics_2d')
subdir('physics_3d')
subdir('rendering')
subdir('xr')