SOURCES += files([
    'aabb.cpp',
    'a_star.cpp',
    'basis.cpp',
    'camera_matrix.cpp',
    'color.cpp',
    'dynamic_bvh.cpp',
    'expression.cpp',
    'face3.cpp',
    'geometry_2d.cpp',
    'geometry_3d.cpp',
    'math_fieldwise.cpp',
    'math_funcs.cpp',
    'plane.cpp',
    'quat.cpp',
    'quick_hull.cpp',
    'random_number_generator.cpp',
    'random_pcg.cpp',
    'rect2.cpp',
    'transform.cpp',
    'transform_2d.cpp',
    'triangle_mesh.cpp',
    'triangulate.cpp',
    'vector2.cpp',
    'vector3.cpp',
    'vector3i.cpp',
])