#SOURCES += files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n'))
SOURCES += files(
  'array.cpp',
  'callable_bind.cpp',
  'callable.cpp',
  'dictionary.cpp',
  'variant_call.cpp',
  'variant_construct.cpp',
  'variant.cpp',
  'variant_destruct.cpp',
  'variant_op.cpp',
  'variant_parser.cpp',
  'variant_setget.cpp',
  'variant_utility.cpp',
)
