SOURCES += files([
    'editor_debugger_inspector.cpp',
    'editor_debugger_node.cpp',
    'editor_debugger_server.cpp',
    'editor_debugger_tree.cpp',
    'editor_network_profiler.cpp',
    'editor_performance_profiler.cpp',
    'editor_profiler.cpp',
    'editor_visual_profiler.cpp',
    'script_editor_debugger.cpp',
])