SOURCES += files([
    'abstract_polygon_2d_editor.cpp',
    'animation_blend_space_1d_editor.cpp',
    'animation_blend_space_2d_editor.cpp',
    'animation_blend_tree_editor_plugin.cpp',
    'animation_player_editor_plugin.cpp',
    'animation_state_machine_editor.cpp',
    'animation_tree_editor_plugin.cpp',
    'asset_library_editor_plugin.cpp',
    'audio_stream_editor_plugin.cpp',
    'baked_lightmap_editor_plugin.cpp',
    'camera_3d_editor_plugin.cpp',
    'canvas_item_editor_plugin.cpp',
    'collision_polygon_2d_editor_plugin.cpp',
    'collision_polygon_3d_editor_plugin.cpp',
    'collision_shape_2d_editor_plugin.cpp',
    'cpu_particles_2d_editor_plugin.cpp',
    'cpu_particles_3d_editor_plugin.cpp',
    'curve_editor_plugin.cpp',
    'debugger_editor_plugin.cpp',
    'editor_debugger_plugin.cpp',
    'editor_preview_plugins.cpp',
    'font_editor_plugin.cpp',
    'gi_probe_editor_plugin.cpp',
    'gpu_particles_2d_editor_plugin.cpp',
    'gpu_particles_3d_editor_plugin.cpp',
    'gpu_particles_collision_sdf_editor_plugin.cpp',
    'gradient_editor_plugin.cpp',
    'item_list_editor_plugin.cpp',
    'light_occluder_2d_editor_plugin.cpp',
    'line_2d_editor_plugin.cpp',
    'material_editor_plugin.cpp',
    'mesh_editor_plugin.cpp',
    'mesh_instance_3d_editor_plugin.cpp',
    'mesh_library_editor_plugin.cpp',
    'multimesh_editor_plugin.cpp',
    'navigation_polygon_editor_plugin.cpp',
    'node_3d_editor_plugin.cpp',
    'ot_features_plugin.cpp',
    'packed_scene_translation_parser_plugin.cpp',
    'path_2d_editor_plugin.cpp',
    'path_3d_editor_plugin.cpp',
    'physical_bone_3d_editor_plugin.cpp',
    'polygon_2d_editor_plugin.cpp',
    'resource_preloader_editor_plugin.cpp',
    'root_motion_editor_plugin.cpp',
    'script_editor_plugin.cpp',
    'script_text_editor.cpp',
    'shader_editor_plugin.cpp',
    'shader_file_editor_plugin.cpp',
    'skeleton_2d_editor_plugin.cpp',
    'skeleton_3d_editor_plugin.cpp',
    'skeleton_ik_3d_editor_plugin.cpp',
    'sprite_2d_editor_plugin.cpp',
    'sprite_frames_editor_plugin.cpp',
    'style_box_editor_plugin.cpp',
    'text_editor.cpp',
    'texture_3d_editor_plugin.cpp',
    'texture_editor_plugin.cpp',
    'texture_layered_editor_plugin.cpp',
    'texture_region_editor_plugin.cpp',
    'theme_editor_plugin.cpp',
    'tile_map_editor_plugin.cpp',
    'tile_set_editor_plugin.cpp',
    'version_control_editor_plugin.cpp',
    'visual_shader_editor_plugin.cpp',
])